fixed some spacing issues

--- a/src/app/components/manualSliderComponents/ManualSliderMobile/ManualSliderMobile.module.css
+++ b/src/app/components/manualSliderComponents/ManualSliderMobile/ManualSliderMobile.module.css
@@ -11,7 +11,8 @@
   flex-direction: row;
   align-items: center;
   place-content: space-between;
-  min-height: 80vh;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .arrow {
